--- a/app/src/main/res/layout/activity_ph__test__result.xml
+++ b/app/src/main/res/layout/activity_ph__test__result.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:padding="8dp"
     tools:context="ramakrishna.watertest_image.PH_Test_Result"
     android:orientation="vertical">
 
@@ -18,7 +17,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="0.4"
-                android:text="Select the color as per the change of water color that has occured in the test sample"
+                android:text="@string/ph_test_result"
                 android:layout_gravity="center"
                 android:textSize="18dp"
                 android:gravity="center"/>
@@ -110,7 +109,7 @@
                         android:layout_weight="0.1"
                         android:background="@color/ph_7"
                         android:text="5.0"
-                        android:layout_margin="2dp"
+                        android:layout_margin="1dp"
                         android:textColor="#000000"
                         android:gravity="center"/>
                     <Button
@@ -120,7 +119,7 @@
                         android:layout_weight="0.1"
                         android:background="@color/ph_8"
                         android:text="6.0"
-                        android:layout_margin="2dp"
+                        android:layout_margin="1dp"
                         android:textColor="#000000"
                         android:gravity="center"/>
                     <Button
@@ -130,7 +129,7 @@
                         android:layout_weight="0.1"
                         android:background="@color/ph_9"
                         android:text="7.0"
-                        android:layout_margin="2dp"
+                        android:layout_margin="1dp"
                         android:textColor="#000000"
                         android:gravity="center"/>
                     <Button
@@ -140,7 +139,7 @@
                         android:layout_weight="0.1"
                         android:background="@color/ph_10"
                         android:text="8.0"
-                        android:layout_margin="2dp"
+                        android:layout_margin="1dp"
                         android:textColor="#000000"
                         android:gravity="center"/>
                     <Button
@@ -150,7 +149,7 @@
                         android:layout_weight="0.1"
                         android:background="@color/ph_11"
                         android:text="9.0"
-                        android:layout_margin="2dp"
+                        android:layout_margin="1dp"
                         android:textColor="#000000"
                         android:gravity="center"/>
                     <Button
@@ -160,7 +159,7 @@
                         android:layout_weight="0.1"
                         android:background="@color/ph_12"
                         android:text="10.0"
-                        android:layout_margin="2dp"
+                        android:layout_margin="1dp"
                         android:textColor="#000000"
                         android:gravity="center"/>
                     <Button
