--- a/app/src/main/res/layout/dialog_output.xml
+++ b/app/src/main/res/layout/dialog_output.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:text="RESULT"
+        android:text="@string/result_"
         android:gravity="center"
         android:textSize="20dp"
         android:textColor="@color/ph_7"
