--- a/app/src/main/res/layout/activity_ph__test__result.xml
+++ b/app/src/main/res/layout/activity_ph__test__result.xml
@@ -90,17 +90,9 @@
                     android:layout_weight="0.1"
                     android:background="@color/ph_6"
                     android:text="5.0"
-                    android:layout_margin="2dp"
+                    android:layout_margin="1dp"
                     android:textColor="#000000"
                     android:gravity="center"/>
-
-            </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="0.5"
-                    android:layout_gravity="center">
 
                     <Button
                         android:id="@+id/btn_7"
@@ -112,6 +104,16 @@
                         android:layout_margin="1dp"
                         android:textColor="#000000"
                         android:gravity="center"/>
+
+            </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.5"
+                    android:layout_gravity="center">
+
+
                     <Button
                         android:id="@+id/btn_8"
                         android:layout_width="0dp"
@@ -119,8 +121,7 @@
                         android:layout_weight="0.1"
                         android:background="@color/ph_8"
                         android:text="6.0"
-                        android:layout_margin="1dp"
-                        android:textColor="#000000"
+                        android:layout_margin="1dp"                    android:textColor="#000000"
                         android:gravity="center"/>
                     <Button
                         android:id="@+id/btn_9"
@@ -160,7 +161,7 @@
                         android:background="@color/ph_12"
                         android:text="10.0"
                         android:layout_margin="1dp"
-                        android:textColor="#000000"
+                        android:textColor="#FFFF00"
                         android:gravity="center"/>
                     <Button
                         android:id="@+id/btn_13"
@@ -168,8 +169,9 @@
                         android:layout_height="match_parent"
                         android:layout_weight="0.1"
                         android:background="@color/ph_13"
-                        android:text="13"
-                        android:visibility="gone"
+                        android:text="12"
+                        android:layout_margin="1dp"
+
                         android:textColor="#000000"
                         android:gravity="center"/>
                     <Button
@@ -177,9 +179,9 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="0.1"
-                        android:visibility="gone"
                         android:background="@color/ph_14"
                         android:text="14"
+                        android:layout_margin="1dp"
                         android:textColor="#000000"
                         android:gravity="center"/>
                 </LinearLayout>
