--- a/app/src/main/res/layout/activity_ph__test__result.xml
+++ b/app/src/main/res/layout/activity_ph__test__result.xml
@@ -161,14 +161,14 @@
                         android:background="@color/ph_12"
                         android:text="10.0"
                         android:layout_margin="1dp"
-                        android:textColor="#FFFF00"
+                        android:textColor="#000000"
                         android:gravity="center"/>
                     <Button
                         android:id="@+id/btn_13"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="0.1"
-                        android:background="@color/ph_13"
+                        android:background="@color/ph_12"
                         android:text="12"
                         android:layout_margin="1dp"
 
@@ -179,7 +179,7 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="0.1"
-                        android:background="@color/ph_14"
+                        android:background="@color/ph_12"
                         android:text="14"
                         android:layout_margin="1dp"
                         android:textColor="#000000"
